--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,27 @@
   --white: #fff;
   --background-section-main: #2f303a;
   --background-section-sub: #f5f4fa;
-  --accent-color-hover: #188CE8;
+  --accent-color-hover: #188ce8;
+  --border-color: #ececec;
+  --border-secondary-color: #eeeeee;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 body {
@@ -15,7 +35,38 @@ body {
   color: var(--primary-text-color);
 }
 .header {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border: 1px solid var(--border-color);
+}
+.header>a{
+  display: block;
+}
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
+.header .container {
+  display: flex;
+  align-items: center;
+}
+
+.main-nav {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-right: 340px;
+}
+.navigation {
+  display: flex;
+  gap: 50px;
+}
+.logo {
+  margin-right: 90px;
 }
 .logo {
   text-decoration: none;
@@ -27,6 +78,15 @@ body {
 }
 .logo-accent {
   color: var(--accent-color);
+}
+
+.contacts {
+  display: flex;
+  gap: 50px;
+}
+
+.contacts > li {
+  display: flex;
 }
 .navigation,
 .contacts,
@@ -65,18 +125,28 @@ body {
 
 .hero {
   background-color: var(--background-section-main);
+  padding-top: 200px;
+  padding-bottom: 200px;
+  text-align: center;
+}
+.gallery .container {
+  justify-content: center;
 }
 .hero-title {
+  display: flex;
+  margin: 0px auto 30px auto;
   color: var(--white);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  width: 695px;
 }
 .main-button {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-style: none;
   border-radius: 4px;
   font-family: inherit;
   font-weight: 700;
@@ -84,11 +154,19 @@ body {
   line-height: 1.88;
   color: var(--white);
   cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  align-items: center;
+  padding: 10px 32px;
 }
 .main-button:hover {
-  background-color: var(--accent-color-hover) ;
+  background-color: var(--accent-color-hover);
 }
 
+.features {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -101,15 +179,22 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
-.features {
-
+.features-list {
+  display: flex;
+  gap: 30px;
+}
+.features-list > li {
+  display: block;
+  width: 270px;
 }
 .features-item {
-  font-size: 14px;;
+  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--secondary-text-color);
+  display: flex;
+  margin-bottom: 10px;
 }
 .feature-parapraph {
   line-height: 1.71;
@@ -121,33 +206,70 @@ body {
   line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+  width: fit-content;
+  display: flex;
+  margin: 0px auto 50px auto;
 }
-.gallery {
 
+.gallery {
+  padding-bottom: 94px;
+}
+
+.gallery-list {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  width: fit-content;
+  gap: 30px;
 }
 
 .team {
   background-color: var(--background-section-sub);
+  padding-bottom: 94px;
+  padding-top: 94px;
 }
-.card {
+.team-list {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+.card-team-container {
+  background-color: var(--white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 
+.name-team-container {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
 }
+
 .team-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+  display: block;
+  margin-bottom: 10px;
 }
 .team-position {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
-
 }
 
 .footer {
-background-color:var(--background-section-main); 
+  background-color: var(--background-section-main);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.address-list {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
 }
 
 .address-list-item {
@@ -167,9 +289,22 @@ background-color:var(--background-section-main);
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+  display: block;
+  margin-bottom: 20px;
 }
 
 /* portfolio */
+.filter {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.filter-list {
+  display: flex;
+  width: fit-content;
+  margin: 0 auto 50px auto;
+  gap: 8px;
+}
+
 .filter-button {
   text-decoration: none;
   font-family: inherit;
@@ -179,16 +314,35 @@ background-color:var(--background-section-main);
   line-height: 1.62;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+  background-color: var(--background-section-sub);
   cursor: pointer;
+  display: block;
+  border: none;
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 .filter-button:hover,
 .filter-button:focus {
   background-color: var(--accent-color);
   color: var(--white);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+.filter-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .filter-cards-item {
   background-color: var(--white);
+}
+.filter-text-container {
+  padding: 20px 24px;
+  background: var(--white);
+border: 1px solid var(--border-secondary-color);
+border-top: none;
 }
 
 .filter-cards-title {
@@ -196,6 +350,7 @@ background-color:var(--background-section-main);
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--secondary-text-color);
+  margin-bottom: 4px;
 }
 .filter-cards-parapraph {
   font-size: 16px;
